Minor fix on mobile nav

--- a/src/components/SideMenu.css
+++ b/src/components/SideMenu.css
@@ -12,7 +12,7 @@
    position: fixed;
    right: 0;
    min-height: 100vh;
-   width: 45vw;
+   width: 65vw;
    z-index: 100;
    transform: translateX(100%);
    background-color: white;
